--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="alert-danger" style="text-align: center" id="fb_msg">
-    <a target="_blank" href="https://www.facebook.com/dialog/oauth?client_id=1429906980595399&response_type=token&scope=email&redirect_uri=http://www.facebook.com/connect/login_success.html">Facebook Connect</a>
+    <a target="_blank" href="http://localhost:3000/fblogin">Facebook Connect</a>
 </div>
 <div class="container">
     <div id="high_chart_id" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>
