local environment'a babohar upojogi code banalam

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="alert-danger" style="text-align: center" id="fb_msg">
-    <a target="_blank" href="http://tabstat.ap01.aws.af.cm/fblogin">Facebook Connect</a>
+    <a target="_blank" href="http://localhost:3000/fblogin">Facebook Connect</a>
 </div>
 <div class="container">
     <div id="high_chart_id" style="min-width: 310px; height: 400px; max-width: 600px; margin: 0 auto"></div>
