--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <a target="_blank" class="btn btn-primary btn-xs" href="http://localhost:3000/fblogin">Facebook Connect</a>
     </div>
     <div class="row" id="datepicker">
-        <div class="input-group input-group-sm col-xs-5 col-sm-5 col-md-5 col-lg-5" >
+        <div class="input-group input-group-sm col-xs-6 col-sm-6 col-md-6 col-lg-6" >
             <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
             <input type="text" name="reservation" id="reservationtime" class="form-control"
                    placeholder="pick a daterange to see past..."/>
+            <span class="input-group-addon btn" id="clear_btn"><span class="glyphicon glyphicon-trash"></span></span></span>
         </div>
     </div>
     <div class="row">
