log tule dilam and, msg change korlam little bit

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="row" style="text-align: center" ng-hide="fbid">
         <div class="alert alert-warning">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            To get past records please always
-            <a target="_blank" href="http://localhost:3000/fblogin"> <strong>Connect with Facebook</strong></a>
+            To store, and then see past records please connect with
+            <a target="_blank" href="http://localhost:3000/fblogin"> <strong>Facebook</strong></a>
         </div>
 
     </div>
