last commit before merge with master

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="row">
-        <div id="high_chart_id" style="min-width: 450px; min-height: 550px; margin: 0 auto"></div>
+        <div id="high_chart_id" style="min-width: 350px; max-height: 450px; margin: 0 auto"></div>
     </div>
 </div>
 
