server'er configuration'a add korlam

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="alert alert-warning">
             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
             To store, and then see past records please connect with
-            <a target="_blank" href="http://localhost:3000/fblogin"> <strong>Facebook</strong></a>
+            <a target="_blank" href="http://192.241.167.91:51795/fblogin"> <strong>Facebook</strong></a>
         </div>
 
     </div>
